--- a/OPOD 7.29/style.css
+++ b/OPOD 7.29/style.css
@@ -16,6 +16,18 @@ div.header{
     height:400px;
 }
 
+#sayHi{
+    background-color: #c8a993;
+    text-decoration: none;
+    border-radius: 4px;
+    outline: none;
+}
+#sayHi:active{
+
+}
+
+
+
 
 div.myInfo span{
     display: block;
